<resources>
    <string name="app_name">PacientesMedicamentos</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="crear">CREAR</string>
    <string name="listar">LISTAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="paciente">Paciente</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="numHijos">NumHijos</string>
    <string name="tieneSeguro">TieneSeguro</string>
    <string name="guardar">GUARDAR</string>
    <string name="detalles">DETALLES</string>
    <string name="creacion_medicamento">Creacion Medicamento</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string-array name="roles">
        <item>VENDEDOR</item>
        <item>CLIENTE</item>
        <item>DELIVERY</item>
    </string-array>
    <string name="title_activity_google_maps">Map</string>
</resources>
